2005-03-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (setup_paths): remove tfm1 tfm2 tfm3 include path
	hack.

2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/libc-extension.cc:
	* flower/include/libc-extension.hh: [Open]BSD simply cast
	cookie/funopen declarations.

	* stepmake/aclocal.m4: Check for libkpathsea.so.

	* kpath-guile/kpath.c (ly_kpathsea_expand_variable): Use
	dl_kpse_find_file.

2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* kpath-guile/kpath.c (open_library): dlopen libkpathsea.so
	(open_library): alternative for static library.

2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in: Set TTFTOOL_ENDIAN iso global CFLAGS.

	* ttftool/GNUmakefile (MODULE_CFLAGS): Add $(TTFTOOL_ENDIAN).

	Drop run-time dependency on teTeX.

	* lily/kpath.cc (initialize_kpathsea): dlopen libkpathsea.

	* stepmake/aclocal.m4 (STEPMAKE_KPATHSEA): Do not include
	KPATHSEA_LIBS in LIBS.
	(STEPMAKE_DLOPEN): New function.

	* lily/font-config.cc (init_fontconfig): Use dir for directory,
	not path.

	* flower/file-path.cc (directories): Rename from paths, as this
	return an array of directories (a single path).

2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/GNUmakefile (MODULE_LIBS): link with kpath-guile

	* lily/all-font-metrics.cc (kpathsea_find_file): wrapper around
	new ly:kpathsea-find-file

	* kpath-guile/kpath.c: new file. Put kpath bindings in lib.

	* kpath-guile/GNUmakefile: new file

	* buildscripts/gen-emmentaler-scripts.py (i): generate
	emmentaler-X.fontname as well.

	* buildscripts/ps-embed-cff.py: new script

	* scm/lily-library.scm: remove ps-embed-cff.

	* scm/framework-ps.scm (write-preamble): don't use kpathsea for
	font loading. 

	* scm/font.scm (add-music-fonts): load dynamics/numbers through
	fontconfig as well.

	* lily/font-config.cc (init_fontconfig): add cff/ too.

	* ly/generate-embedded-cff.ly: capitalize.

	* lily/pango-select.cc (select_pango_font): use ::find_pango_font,