@@ -30,6 +30,8 @@ AC_ARG_ENABLE(gui,
 # must come before any header checks
 STEPMAKE_COMPILE
 
+STEPMAKE_KPATHSEA
+
 STEPMAKE_PYTHON(REQUIRED,2.1)
 STEPMAKE_GCC(REQUIRED, 2.8)
 STEPMAKE_CXX(REQUIRED)
@@ -49,7 +51,6 @@ STEPMAKE_MSGFMT(REQUIRED)
 STEPMAKE_TEXMF(REQUIRED)
 STEPMAKE_TEXMF_DIRS
 STEPMAKE_GUILE_DEVEL(REQUIRED, 1.6.5)
-STEPMAKE_KPATHSEA
 STEPMAKE_MAKEINFO(REQUIRED)
 STEPMAKE_PYTHON_DEVEL(REQUIRED)
 
